--- a/package.json
+++ b/package.json
@@ -17,18 +17,23 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.0.0",
     "chartist": "^0.11.0",
+    "datatables.net-bs4": "^1.10.20",
     "es6-promise": "^4.2.4",
     "vee-validate": "^3.2.5",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
     "vue-carousel": "^0.18.0",
     "vue-clickaway": "^2.1.0",
+    "vue-datatables-net": "^1.2.5",
     "vue-flatpickr-component": "^8.1.5",
     "vue-notifyjs": "^0.3.0",
     "vue-owl-carousel": "^2.0.3",
     "vue-router": "^3.0.1",
     "vue-select": "^3.4.0",
-    "vuejs-datatable": "^2.0.0-alpha.7"
+    "vue-tables-2": "^2.0.0",
+    "vue2-datatable-component": "^2.3.1",
+    "vuejs-datatable": "^2.0.0-alpha.7",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.10.0",
