--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chartist": "^0.11.0",
     "datatables.net-bs4": "^1.10.20",
     "es6-promise": "^4.2.4",
+    "uiv": "^0.34.3",
     "vee-validate": "^3.2.5",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
@@ -26,6 +27,7 @@
     "vue-clickaway": "^2.1.0",
     "vue-datatables-net": "^1.2.5",
     "vue-flatpickr-component": "^8.1.5",
+    "vue-js-modal": "^1.3.33",
     "vue-notifyjs": "^0.3.0",
     "vue-owl-carousel": "^2.0.3",
     "vue-router": "^3.0.1",
